# ytdl

./: Cargo.toml  README.md  args.yaml
src/: main.rs  utils.rs  validation.rs
src/utils/: argument_parsing.rs  exec_command.rs  path_utils.rs  path_validation.rs  url_validation.rs  user_input.rs  validation.rs
