[package]
name = "ytdl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.3", features = ["yaml"] }
dirs = "3.0"
anyhow = "1.0.42"
colored = "2"
lazy_static = "1.4.0"
regex = "1.5.4"
strum_macros = "0.21.1"
